# richmpris

./: README.md  pyproject.toml  richmpris.py  richmpris.spec
